# float-view-renderer

./: .gitignore  Cargo.toml  justfile
src/: cli.rs  err.rs  input.rs  main.rs  render.rs  svg.rs
templates/: view.stpl
test_data/: fc_imperial.csv  fc_imperial_bms.csv  fc_metric.csv  fc_metric_bms.csv
