[package]
name = "float-view-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
csv = "1.3.1"
lexopt = "0.3.0"
rayon = "1.10.0"
resvg = "0.44.0"
sailfish = "0.9.0"
sailfish-macros = "0.9.0"
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.134"
usvg = "0.44.0"
zip = "2.2.2"
