[package]
name = "float-view-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.1"
lexopt = "0.3.0"
sdl2 = { version = "0.37.0", features = ["ttf", "image", "gfx"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_derive = "1.0.217"
serde_json = "1.0.135"
zip = "2.2.2"
